# enumerable

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  package.yml
enumerable_derive/: Cargo.toml  IMPL_DETAIL.md  LICENSE  README.md
enumerable_derive/src/: IMPL_DETAIL.md  code_gen.rs  fields.rs  lib.rs  size_option.rs  tuples.rs
enumerable_derive/src/context/: mod.rs
enumerable_derive/src/targets/: enumerator_naming.rs  mod.rs
examples/: 01-basic-and-primitives.rs  01-builtin.rs  02-derive-on-enums.rs  02-enum.rs  02-tuples.rs  03-derive-on-enums.rs  03-derive-on-structs.rs  03-struct-tuple.rs  03-struct.rs  04-derive-on-structs.rs  04-option-and-result.rs  04-option.rs  05-option-and-result.rs  05-result.rs  05-tuples.rs  06-generics.rs  06-mix.rs  06-readme.rs  07-readme-extended.rs  07-readme.rs  08-readme-extended.rs  09-readme-generics.rs  README.md  run_examples.sh  xx-generics-with-bounds.rs  xx-generics.rs
examples/example_crates/: run_example_crates.sh
examples/example_crates/crate_alias/: Cargo.toml
examples/example_crates/crate_alias/src/: main.rs
examples/example_crates/no_std/: Cargo.toml
examples/example_crates/no_std/src/: main.rs
src/: CRATE_DOC.md  impl_built_in.rs  impl_tuple.rs  lib.rs  test.rs
src/test/: mod.rs  testee.rs  tester.rs
