[workspace]
members = ["enumerable_derive"]

[workspace.package]
authors = [ "aarkegz <aarkegz@gmail.com>" ]
license = "MIT"
edition = "2021"
version = "0.1.0"
include = [
    "README.md",
    "LICENSE",
    "Cargo.toml",
    "src/**/*",
    "examples/**/*",
]

[package]
name = "enumerable"
description = "A library helping you to enumerate all possible values of a type"
authors.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true
include.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enumerable_derive = { path = "enumerable_derive", version = "=0.1.0" }
